<resources>
    <string name="app_name">MyHealth</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="hint_username">请输入用户名</string>
    <string name="password">密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="refindPWD">忘记密码？点这里找回</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="is_searching">正在搜寻......</string>
    <string name="bloodpressure">血压</string>
    <string name="oxygensaturation">血氧</string>
    <string name="bloodsugar">血糖</string>
    <string name="pulse">脉搏</string>
    <string name="heartrate">心率</string>
    <string name="caozuo_shuoming">操作说明</string>
    <string name="dbp">舒张压</string>
    <string name="sbp">收缩压</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="accept">测量</string>
    <string name="reaccept">重新测量</string>

    <string name="title_section1">我的信息</string>
    <string name="title_section2">健康测量</string>
    <string name="title_section3">疾病介绍</string>
    <string name="title_sectionn">注销</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
