<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        style="@style/title_background"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/iv_back"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/login"
           style="@style/title_font"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_small"
            android:id="@+id/tv_register"
            />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:src="@drawable/yi"
        android:padding="@dimen/padding"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/login_text_size"
            android:textColor="@color/black"
            />
        <EditText
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textSize="@dimen/hint_login_text_size"
            android:id="@+id/et_username"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/login_text_size"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textSize="@dimen/hint_login_text_size"
            android:id="@+id/et_password"
            />

    </LinearLayout>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginLeft="@dimen/margin_little_big"
        android:layout_marginRight="@dimen/margin_little_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/darkturquoise"
        android:textColor="@color/white"
        android:id="@+id/btn_login"
        />
    <TextView
        android:layout_marginLeft="@dimen/margin_little_big"
        android:layout_marginRight="@dimen/margin_little_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refindPWD"
        android:textColor="@color/blue"
        android:gravity="right"
        android:paddingRight="@dimen/padding"
        android:id="@+id/tv_refindpwd"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/padding"
    >
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin_little_big"
        android:text="@string/remember_password"
        android:id="@+id/cb_remember_password"
        />
    <CheckBox
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/auto_login"
        android:id="@+id/cb_auto_login"
        />
</LinearLayout>

</LinearLayout>
