<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/title_background"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/arrow2"
            android:id="@+id/iv_back"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/register"
            style="@style/title_font"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            />

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="4"
       android:layout_marginLeft="@dimen/margin"
       android:layout_marginRight="@dimen/margin"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="10dp"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:background="@drawable/register_edittext_shape"
           android:layout_margin="2dp">

           <TextView
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="match_parent"
               android:text="用户名："
               style="@style/register_tv_style"/>
           <EditText
               android:inputType="text"
               android:layout_width="0dp"
               android:layout_weight="5"
               android:layout_height="match_parent"
               style="@style/register_et_style"
               android:background="@null"
               android:hint="@string/hint_username"
               android:id="@+id/et_username"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:background="@drawable/register_edittext_shape"
           android:layout_margin="2dp">

           <TextView
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="match_parent"
               android:text="密码："
               style="@style/register_tv_style"/>
           <EditText
               android:inputType="textPassword"
               android:layout_width="0dp"
               android:layout_weight="5"
               android:layout_height="match_parent"
               style="@style/register_et_style"
               android:background="@null"
               android:hint="@string/hint_password"
               android:id="@+id/et_password"/>
       </LinearLayout><LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:background="@drawable/register_edittext_shape"
       android:layout_margin="2dp">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent"
           android:text="确认密码："
           style="@style/register_tv_style"/>
       <EditText
           android:inputType="textPassword"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="match_parent"
           style="@style/register_et_style"
           android:background="@null"
           android:hint="请再次输入密码"
           android:id="@+id/et_password_confirm"/>
   </LinearLayout><LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:background="@drawable/register_edittext_shape"
       android:layout_margin="2dp">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent"
           android:text="姓名："
           style="@style/register_tv_style"/>
       <EditText
           android:inputType="text"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="match_parent"
           style="@style/register_et_style"
           android:background="@null"
           android:hint="请输入姓名"
           android:id="@+id/et_name"/>
   </LinearLayout><LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:background="@drawable/register_edittext_shape"
       android:layout_margin="2dp">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent"
           android:text="性别："
           style="@style/register_tv_style"/>
       <RadioGroup
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="match_parent"
           style="@style/register_et_style"
           android:orientation="horizontal"
           android:id="@+id/rg_sex"
           >

           <RadioButton
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="男"
               android:id="@+id/rb_male"
               android:checked="true"/>
           <RadioButton
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="match_parent"
               android:text="女"
               android:id="@+id/rb_female"/>
       </RadioGroup>
   </LinearLayout><LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:background="@drawable/register_edittext_shape"
       android:layout_margin="2dp">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent"
           android:text="年龄："
           style="@style/register_tv_style"/>
       <EditText
           android:inputType="number"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="match_parent"
           style="@style/register_et_style"
           android:background="@null"
           android:hint="请输入年龄"
           android:id="@+id/et_age"/>
   </LinearLayout><LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:background="@drawable/register_edittext_shape"
       android:layout_margin="2dp">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="match_parent"
           android:text="手机号："
           style="@style/register_tv_style"/>
       <EditText
           android:inputType="phone"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="match_parent"
           style="@style/register_et_style"
           android:background="@null"
           android:hint="请输入手机号"
           android:id="@+id/et_phone"/>
   </LinearLayout>

   </LinearLayout>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/margin_little_big"
        android:layout_marginRight="@dimen/margin_little_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/darkturquoise"
        android:textColor="@color/white"
        android:id="@+id/btn_register"
        />


</LinearLayout>